refactor(scripts): simplify squash_branch.sh script
- Removed unnecessary function `prepare_input_for_assistant` in `squash_branch.sh`.
- Integrated commit log generation directly into the `generate_commit_message` function.

This change simplifies the script by eliminating intermediate steps and storing inputs temporarily, thereby improving maintainability.

Modifications in other files include:
- **assistant_functions.py**: Added an `additional_context` field to `AskAssistant` class.
- **assistant_gpt.py**: Appended `additional_context` to messages when calling `AskAssistant`.
- **configure_assistant.py**: Adjusted configuration access to fetch `assistant_id`.
- **update_assistant.py**: Removed an unused import and the assignment of a tool, slightly adjusted the instruction string for clarity and conciseness.

--- a/assistant_config.json
+++ b/assistant_config.json
@@ -13,5 +13,10 @@
             "name": "commit",
             "assistant_id": "asst_MoHjFNWCAIKokAVOgEbPJrpM",
             "description": "This assistant is specialized in generating commit messages"
+        },
+    "commit_squash": {
+            "name": "commit_squash",
+            "assistant_id": "asst_eMpwfrbqkU4VEkCL2DS2d7CW",
+            "description": "This assistant is specialized in generating commit messages for squash"
         }
 }
