--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -61,9 +61,7 @@ jobs:
           cp /tmp/assistant_output.txt assistant_issue_comment.txt
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          # Commit the changes, handling the case where there are no changes
-          git commit -m "Assistant: Proposed solutions for issue ${{ github.event.inputs.issue_number }}" || echo "No changes to commit"
+          scripts/generate_commit.sh
           git push --set-upstream origin issue-${{ github.event.inputs.issue_number }}
 
       - name: Comment on the issue
