ci: add OPENAI_API_KEY to commit step in workflow
The `.github/workflows/run_assistant_on_issue.yaml` file has been updated to include the `OPENAI_API_KEY` in the environment variables of the `Commit the generated files` step. This change allows the workflow to securely use the OpenAI API during the process.

### Context:
This modification is consistent with the repository's standard operation of utilizing OpenAI's services, and employs GitHub Secrets to manage the API key securely, adhering to best practices for sensitive data management.

- Ensures that the assistant can function using the required API settings.
- Continues to comply with repository security practices by leveraging environment variables.

This commit does not involve any changes outside of the workflow's configuration.

--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -57,6 +57,8 @@ jobs:
               'EOF'
 
       - name: Commit the generated files
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           cp /tmp/assistant_output.txt assistant_issue_comment.txt
           git config --global user.name "github-actions[bot]"
