--- a/assistant_config.json
+++ b/assistant_config.json
@@ -1,22 +1,33 @@
 {
-    "main" : {
-            "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
-            "description": "This assistant is designed to help with general queries",
-            "slave_assistants": [
-                {
-                    "assistant_id": "asst_J5Of8UtJr9IYmJo6DBjTgCQP",
-                    "description": "This assistant is specialized in open AI python API"
-                }
-            ]
-        },
+    "main": {
+        "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
+        "description": "This assistant is designed to help with general queries",
+        "slave_assistants": [
+            {
+                "assistant_id": "asst_J5Of8UtJr9IYmJo6DBjTgCQP",
+                "description": "This assistant is specialized in open AI python API"
+            }
+        ]
+    },
     "commit": {
-            "name": "commit",
-            "assistant_id": "asst_MoHjFNWCAIKokAVOgEbPJrpM",
-            "description": "This assistant is specialized in generating commit messages"
-        },
+        "name": "commit",
+        "assistant_id": "asst_MoHjFNWCAIKokAVOgEbPJrpM",
+        "description": "This assistant is specialized in generating commit messages"
+    },
     "commit_squash": {
-            "name": "commit_squash",
-            "assistant_id": "asst_eMpwfrbqkU4VEkCL2DS2d7CW",
-            "description": "This assistant is specialized in generating commit messages for squash"
-        }
+        "name": "commit_squash",
+        "assistant_id": "asst_eMpwfrbqkU4VEkCL2DS2d7CW",
+        "description": "This assistant is specialized in generating commit messages for squash"
+    },
+    "complex_tasks": {
+        "name": "complex_tasks",
+        "assistant_id": "asst_7EYNEiYFJnFIjV3fnvzVheZB",
+        "description": "This assistant is specialized in complex tasks by managing multiple assistants",
+        "slave_assistants": [
+            {
+                "assistant_id": "asst_eb8VshjBYgNpOFyCImMN2zFA",
+                "description": "This assistant is designed to help with general queries"
+            }
+        ]
+    }
 }
