--- a/.github/workflows/update_assistant_instructions.yml
+++ b/.github/workflows/update_assistant_instructions.yml
@@ -30,5 +30,5 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           echo 'Updating assistant instructions...'
-          python tools/update_assistant.py
+          python tools/workflow_specific/update_assistant.py
 
