feat!: Enhance workflow for deleting assistant and vector store
- Introduced a new script (`delete_repo_assistant.py`) for comprehensive deletion of assistants and vector stores using configuration data.
- Updated GitHub Action workflow to utilize the new script, ensuring IDs are processed from a JSON configuration.
- Enhanced ID fetching utility to support JSON output.
- Removed obsolete script and updated setup for command-line usage.

These enhancements streamline assistant and vector store deletion processes and improve configuration management through structured data formats.

--- a/.github/workflows/handle_branch_deletion.yml
+++ b/.github/workflows/handle_branch_deletion.yml
@@ -28,11 +28,12 @@ jobs:
         REPO_NAME=${{ github.repository }}
         BRANCH=${{ github.event.ref }}
         BRANCH_NAME="${BRANCH##*/}"
-        python3 tools/fetch_ids_from_names.py --repository "$REPO_NAME" --branch "$BRANCH_NAME"
+        OUTPUT_FILE="ids_output.json"
+        python3 tools/workflow_specific/fetch_ids_from_names.py --repository "$REPO_NAME" --branch "$BRANCH_NAME" --output "$OUTPUT_FILE"
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
 
     - name: Delete Assistant and Vector Store
-      run: python tools/delete_assistant.py
+      run: python ai_assistant/delete_repo_assistant.py ids_output.json
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
