refactor: rename workflow files and enhance repo assistant functionality
- Renamed several workflow YAML files for consistency and clarity in the GitHub actions directory.
- Updated ".github/workflows/clean_before_merge.yaml" to reflect a more descriptive task name for the cleaning job.
- Enhanced "ai_assistant/create_repo_assistant.py" to automatically call update scripts using subprocess for better integration.
- Revised "setup.py" to include new script entry points for updating files and assistant utilities, as well as to package utility scripts in the distribution.

--- a/.github/workflows/clean_before_merge.yaml
+++ b/.github/workflows/clean_before_merge.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Run Cleaning Script
+      - name: Cleaning repo
         run: |
           git fetch origin main
           git checkout origin/main -- repo_assistant_config.json
