fix: update workflow and script for branch detection and module import
### Workflow Updates

1. **create_repo_assistant.yml**
   - Removed the explicit extraction of the branch name using shell commands within GitHub Actions workflow. The `run` command now installs `ai-assistant` and calls `ai_init_repo`, streamlining the workflow setup.

2. **update_assistant_files.yml**
   - Changed the script path in the workflow from `tools/workflow_specific/clean_update_vector_store.py` to `ai_assistant/clean_update_vector_store.py` to align with the updated module structure.

3. **update_assistant_instructions.yml**
   - Updated the path for `update_assistant.py` to reflect its move to the `ai_assistant` directory.

### Script Update

- **create_repo_assistant.py**
  - Added functions `get_current_branch` to automatically detect the current Git branch and `find_git_root` to ensure the script runs inside a Git repository.
  - Refactored to use single quotes for strings for consistency.
  - Removed hardcoded branch name 'main' and replaced it with dynamic branch detection.

These changes ensure that the repository setup is dynamically aware of its environment, and the workflows use consistent module imports reflecting recent directory restructurings.

--- a/.github/workflows/create_repo_assistant.yml
+++ b/.github/workflows/create_repo_assistant.yml
@@ -23,14 +23,12 @@ jobs:
     - name: Install Dependencies
       run: pip install -r requirements.txt
 
-    - name: Extract Branch Name
-      id: extractbranch
-      run: echo "branch_name=${GITHUB_REF##*/}" >> $GITHUB_ENV
-
     - name: Create Repo Assistant
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      run: python tools/create_repo_assistant.py ${{ github.repository }} ${{ env.branch_name }}
+      run: |
+        pip install ai-assistant
+        ai_init_repo
 
     - name: Commit and Push Changes
       run: |
