refactor: update paths and commands in workflow and tool configurations
### Renaming
- The following files were renamed to better reflect their usage in the project:
  - `.github/workflows/update_assistant_instructions.yml` renamed to `.github/workflows/update_assistant.yml`
  - `tools/configuration/configure_assistant.py` renamed to `tools/open_ai_configuration/configure_assistant.py`
  - `tools/workflow_specific/delete_all_open_ai_files.py` renamed to `tools/open_ai_configuration/delete_all_open_ai_files.py`
  - `tools/configuration/dump_assistant_config.py` renamed to `tools/open_ai_configuration/dump_assistant_config.py`
  - `tools/configuration/initial_config.json` renamed to `tools/open_ai_configuration/initial_config.json`

### Workflow Update
- Modified the `update_assistant_files.yml` to use the `ai-assistant` package:
  - Previous command was `python ai_assistant/clean_update_vector_store.py .`
  - Now replaced with `pip install ai-assistant` followed by `ai_update_files .`

These changes organize the files and directories to improve clarity and ensure that the workflows use the latest commands for file updates. No major functional changes were introduced.

--- a/.github/workflows/update_assistant.yml
+++ b/.github/workflows/update_assistant.yml
@@ -1,7 +1,7 @@
 # This workflow automatically updates the ai_assistant instruction with the repository structure
 # whenever a push is made to the main branch.
 
-name: Update Assistant Instructions
+name: Update Assistant
 
 on:
   push:
@@ -29,6 +29,6 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          echo 'Updating assistant instructions...'
-          python ai_assistant/update_assistant.py
+          pip install ai-assistant
+          ai_update_assistant .
 
