--- a/.github/workflows/update_assistant_files.yml
+++ b/.github/workflows/update_assistant_files.yml
@@ -27,4 +27,5 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        python ai_assistant/clean_update_vector_store.py .
+        pip install ai-assistant
+        ai_update_files .
