fix(workflows): correct Python package installation command and rename workflow file
- **create_repo_assistant.yml**: Fixed the package installation command from `ai-assistant` to `ai_assistant` to ensure correct dependency resolution.
- **update_assistant_files.yml**: Similar correction for the package installation from `ai-assistant` to `ai_assistant`.
- **workflow renaming**: Renamed `update_assistant.yml` to `update_assistant_instructions.yml` to better reflect the file's purpose, now including logic to update assistant instructions on push to the main branch.

--- a/.github/workflows/create_repo_assistant.yml
+++ b/.github/workflows/create_repo_assistant.yml
@@ -27,7 +27,7 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        pip install ai-assistant
+        pip install ai_assistant
         ai_init_repo
 
     - name: Commit and Push Changes
