ci: rename and update assistant workflow file
Renamed the workflow file from 'update_assistant_instructions.yml' to 'update_assistant.yml' for clarity.

Added a new workflow configuration under '.github/workflows/update_assistant.yml' that updates the AI assistant's instructions whenever there is a push to the main branch. The workflow includes steps to:

- Checkout the repository
- Set up a Python environment
- Install dependencies if a 'requirements.txt' file is present
- Update the assistant's instructions using the 'ai_update_assistant' command

The 'OPENAI_API_KEY' is used as a secret for authentication, ensuring secure updates. This change aligns with the repository's goal of maintaining up-to-date assistant instructions with each code change.

--- a/.github/workflows/update_assistant.yml
+++ b/.github/workflows/update_assistant.yml
@@ -29,6 +29,6 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          pip install ai-assistant
+          pip install ai_assistant
           ai_update_assistant .
 
