chore(git): update GitHub Actions workflows for local package installation
This commit updates the following GitHub Actions workflows to install the local ai_assistant package:

- `create_repo_assistant.yml`
- `update_assistant.yml`
- `update_assistant_files.yml`

The installation command has been modified from a direct package install to navigating into the `ai_assistant` directory and running the installation from there. This ensures that the correct version of the package is used directly from the local source.

--- a/.github/workflows/update_assistant_files.yml
+++ b/.github/workflows/update_assistant_files.yml
@@ -27,5 +27,5 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        pip install ai_assistant
+        cd ai_assistant && pip install . && cd ..
         ai_update_files .
