--- a/.github/workflows/create_repo_assistant.yml
+++ b/.github/workflows/create_repo_assistant.yml
@@ -27,7 +27,7 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        pip install ai_assistant
+        cd ai_assistant && pip install . && cd ..
         ai_init_repo
 
     - name: Commit and Push Changes
